Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68804

genericunix/qgenericunixservices.cpp:180:48: error: unused parameter 'url' [-Werror,-Wunused-parameter]

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • None
    • 5.12
    • Other
    • None
    • OS X 10.11 (clang-x86_64) - DeveloperBuild, Release, QtNamespace, NoPch, AbortTestingOnFirstFailure

      https://codereview.qt-project.org/#/c/231959/ Merge remote-tracking branch 'origin/5.11' into dev

      c6b3f4b28200a2f1a4af70cc30af91b74a6df64b Fix black border around main widget with non-integer scaling
        c118f642c35f67a4ac475daa78fef14eae2fed61 Doc: Update Elided Label example
        9551d62d97c15a74f257df2219d719264ff9e68c Doc: Update Factorial Example
        f7c8a991c300f99da808ef2657b16a976c1dfc7a QFileSystemWatcher/Linux: don't print warnings for benign cases
        73b2d7f612c0c01ac55da52612c198b5cac0fa26 QNX: Add QQnxEglWindow::format() overload
        dbad7bd2345df603a98d7cd35fceb2e9c1998250 Doc: Sql example Books lock rating column width
        427e5d61b7b33c8a4cb8da14c1e465244e53cd88 Add support for building QtWayland on macOS
        3e201d645e1276c5168d7fef6943f95cc67d8643 MSVC: Enable the detection of C++14 and 17 in MSVC 2017 15.7
        835c79bc4f21b6503a03d9d9ad6cf6434fb74d43 Add changes file for Qt 5.9.6
        f9421af66eb979b187f83cd128fed525e072be7d Add changes file for Qt 5.9.5
        5b2d33db7c1e6db8f6b7021b9f7c8594880c7003 Remove extraneous text after #if
        8cc27590bd2a04ce841cdb66f234ff13f11148af Make sure MODULE is set even when we are not creating a pri file
      

      https://testresults.qt.io/coin/integration/qt/qtbase/tasks/1528816814

      https://testresults.qt.io/logs/qt/qtbase/d950dd08b7e54e672f704a1dafc8d42982973473/MacOSOSX_10_11x86_64MacOSOSX_10_11x86_64Clangqtci-osx-10.11-x86_64-3-2ded8dDeveloperBuild_Release_QtNamespace_NoPch/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1528816855/log.txt.gz

      /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -pipe -stdlib=libc++ -O2 -fPIC -std=c++1z -fapplication-extension  -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk -mmacosx-version-min=10.11 -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Winconsistent-missing-override -Wobjc-interface-ivars -Wobjc-method-access -Wobjc-multiple-method-names -Werror -Wno-error=#warnings -Wno-error=deprecated-declarations -DQT_NO_CAST_FROM_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_SERVICE_SUPPORT_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_GUI_LIB -DQT_DBUS_LIB -DQT_CORE_LIB -DQT_NAMESPACE=TestNamespace -I. -I../../../include -I../../../include/QtServiceSupport -I../../../include/QtServiceSupport/5.12.0 -I../../../include/QtServiceSupport/5.12.0/QtServiceSupport -I../../../include/QtGui/5.12.0 -I../../../include/QtGui/5.12.0/QtGui -I../../../include/QtCore/5.12.0 -I../../../include/QtCore/5.12.0/QtCore -I../../../include/QtGui -I../../../include/QtDBus -I../../../include/QtCore -I.moc -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/System/Library/Frameworks/OpenGL.framework/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/System/Library/Frameworks/AGL.framework/Headers -I/usr/local/opt/openssl/include -I../../../mkspecs/macx-clang -F/Users/qt/work/qt/qtbase/lib -o .obj/qgenericunixservices.o genericunix/qgenericunixservices.cpp
       genericunix/qgenericunixservices.cpp:180:48: error: unused parameter 'url' [-Werror,-Wunused-parameter]
       make[3]: *** [.obj/qgenericunixservices.o] Error 1
       make[2]: *** [sub-services-make_first] Error 2
       make[1]: *** [sub-platformsupport-make_first] Error 2
       make: *** [sub-src-make_first] Error 2
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            laknoll Lars Knoll
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes