Fix unused parameter warning

Task-number: QTBUG-68804
Change-Id: Id40ea045237e5ceafc04d86629f2264eecc084c1
Reviewed-by: Liang Qi <liang.qi@qt.io>